add new banner to reflect new organization

--- a/eBudgeting/src/main/webapp/resources/css/app.css
+++ b/eBudgeting/src/main/webapp/resources/css/app.css
@@ -29,7 +29,7 @@ div.navbar {
 }
 
 div#pageHeader {
-	background-image: url("../graphics/header1.gif");
+	background-image: url("../graphics/header1_newrubber.png");
 	height: 120px;
 }
 
